--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -95,8 +95,8 @@
                   <th width=7%><left>Date</left></th>
                   <th width=25%><left>Topic(s)</left></th>
                   <th width=15%><left>Prior Reading</left></th>
-                  <th colspan="2" width=30%><center>Assignments</center></th>
-                  <th width=10%><left>Project Timeline</left></th>
+                  <th colspan="2" width=25%><center>Assignments</center></th>
+                  <th width=20%><left>Project Timeline</left></th>
                 </tr>
                 <tr>
                   <th></th>
@@ -202,8 +202,8 @@
                 <tr>
                   <td><left>10</left></td>
                   <td><left>Tue Sep 24</left></td>
-                  <td><left>Planning in Deterministic Environments 2</left></td>
-                  <td><left>10.1-10.3</left></td>
+                  <td><left>PDDL Review</left></td>
+                  <td><left></left></td>
                   <td></td>
                   <td><center>Homework 1</center></td>
                   <td></td>
@@ -216,14 +216,14 @@
                   <td><left>13.1-13.5</left></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <td>Project Teams Announced</td>
                 </tr>
 
                 <tr>
                   <td><left>12</left></td>
                   <td><left>Tue Oct 1</left></td>
-                  <td><left>Probabilistic Inference 1</left></td>
-                  <td><left>14.1-14.4</left></td>
+                  <td><left>Markov Decision Processes 1</left></td>
+                  <td><left>17.1-17.3</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -232,8 +232,8 @@
                 <tr>
                   <td><left>13</left></td>
                   <td><left>Thu Oct 3</left></td>
-                  <td><left>Probabilistic Inference 2</left></td>
-                  <td><left>14.4-14.5</left></td>
+                  <td><left>Markov Decision Processes 2</left></td>
+                  <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -242,11 +242,11 @@
                 <tr>
                   <td><left>14</left></td>
                   <td><left>Tue Oct 8</left></td>
-                  <td><left>Markov Decision Processes 1</left></td>
+                  <td><left>Markov Decision Processes Review</left></td>
                   <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <td>Project Proposals Due</td>
                 </tr>
 
                 <tr>
@@ -262,8 +262,8 @@
                 <tr>
                   <td><left>16</left></td>
                   <td><left>Thu Oct 17</left></td>
-                  <td><left>Markov Decision Processes 2</left></td>
-                  <td><left>17.1-17.3</left></td>
+                  <td><left>Reinforcement Learning 1</left></td>
+                  <td><left>21.1-21.3</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -272,8 +272,8 @@
                 <tr>
                   <td><left>17</left></td>
                   <td><left>Tue Oct 22</left></td>
-                  <td><left>Markov Decision Processes 3</left></td>
-                  <td><left>17.1-17.3</left></td>
+                  <td><left>Reinforcement Learning 2</left></td>
+                  <td><left>21.3-21.6</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -282,8 +282,8 @@
                 <tr>
                   <td><left>18</left></td>
                   <td><left>Thu Oct 24</left></td>
-                  <td><left>Reinforcement Learning 1</left></td>
-                  <td><left>21.1-21.3</left></td>
+                  <td><left>Probabilistic Inference 1</left></td>
+                  <td><left>14.1-14.4</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -292,8 +292,8 @@
                 <tr>
                   <td><left>19</left></td>
                   <td><left>Tue Oct 29</left></td>
-                  <td><left>Reinforcement Learning 2</left></td>
-                  <td><left>21.3-21.6</left></td>
+                  <td><left>Probabilistic Inference 2</left></td>
+                  <td><left>14.4-14.5</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
