Minor fix in schedule F19

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -212,7 +212,7 @@
                 <tr>
                   <td><left>11</left></td>
                   <td><left>Thu Sep 26</left></td>
-                  <td><left>Partial Observability</left></td>
+                  <td><left>Stochasticity in Planning</left></td>
                   <td><left>13.1-13.5</left></td>
                   <td></td>
                   <td></td>
