Added HW2 in Fall 19

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -224,7 +224,7 @@
                   <td><left>Tue Oct 1</left></td>
                   <td><left>Markov Decision Processes 1</left></td>
                   <td><left>17.1-17.3</left></td>
-                  <td><left></left></td>
+                  <td><center>Homework 2</center></td>
                   <td></td>
                   <td></td>
                 </tr>
@@ -265,7 +265,7 @@
                   <td><left>Reinforcement Learning 1</left></td>
                   <td><left>21.1-21.3</left></td>
                   <td></td>
-                  <td></td>
+                  <td><center>Homework 2</center></td>
                   <td></td>
                 </tr>
 
