--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -294,7 +294,7 @@
                   <td><left>Tue Oct 29</left></td>
                   <td><left>Probabilistic Inference 2</left></td>
                   <td><left>14.4-14.5</left></td>
-                  <td></td>
+                  <td><center>Homework 3</center></td>
                   <td></td>
                   <td></td>
                 </tr>
@@ -335,7 +335,7 @@
                   <td><left>Statistical Learning</left></td>
                   <td><left>18.1-18.5</left></td>
                   <td></td>
-                  <td></td>
+                  <td><center>Homework 3</center></td>
                   <td></td>
                 </tr>
 
@@ -346,7 +346,7 @@
                   <td><left>18.7</left></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <td><left>Theory Project Deadline (<b>Nov 13</b>)</left></td>
                 </tr> 
 
                 <tr>
@@ -376,7 +376,7 @@
                   <td><left></left></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <td><left>Programming Project Deadline (<b>Nov 25</b>)</left></td>
                 </tr>
 
                 <tr>
