updated CSE571 F19 schedule

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -67,7 +67,7 @@
 
           <h3><ptitle>Instructor</ptitle></h3> 
           <h4>Prof. Siddharth Srivastava</h4>
-          <h4><ptitle>Office Hours</ptitle>&nbsp; &nbsp;  09:00 am - 11:00 am Thursdays | BYENG 592  </h4>
+          <h4><ptitle>Office Hours</ptitle>&nbsp; &nbsp;  09:00 am - 11:00 am Tuesdays | BYENG 592  </h4>
           <h4><ptitle>Contact Details</ptitle>&nbsp; &nbsp; siddharths@asu.edu | BYENG 592  </h4>
           <br />
 
@@ -293,7 +293,7 @@
                   <td><left>19</left></td>
                   <td><left>Tue Oct 29</left></td>
                   <td><left>Probabilistic Inference 2</left></td>
-                  <td><left>14.4-14.5</left></td>
+                  <td><left>14.1-14.4</left></td>
                   <td><center>Homework 3</center></td>
                   <td></td>
                   <td></td>
@@ -302,8 +302,8 @@
                 <tr>
                   <td><left>20</left></td>
                   <td><left>Thu Oct 31</left></td>
-                  <td><left>Partially Observable MDPs (POMDPs)</left></td>
-                  <td><left>17.4</left></td>
+                  <td><left>Probabilistic Inference 3</left></td>
+                  <td><left>14.4-14.5</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -312,8 +312,8 @@
                 <tr>
                   <td><left>21</left></td>
                   <td><left>Tue Nov 5</left></td>
-                  <td><left>Tutorial: POMDP solvers</left></td>
-                  <td><left>17.4</left></td>
+                  <td><left>Probabilistic Inference 4</left></td>
+                  <td><left>14.4-14.5</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -322,8 +322,8 @@
                 <tr>
                   <td><left>22</left></td>
                   <td><left>Thu Nov 7</left></td>
-                  <td><left>Game Trees</left></td>
-                  <td><left>5.1-5.3</left></td>
+                  <td><left>Tutorial: DBN</left></td>
+                  <td><left></left></td>                  
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -332,8 +332,8 @@
                 <tr>
                   <td><left>23</left></td>
                   <td><left>Tue Nov 12</left></td>
-                  <td><left>Statistical Learning</left></td>
-                  <td><left>18.1-18.5</left></td>
+                  <td><left>Partially Observable MDPs (POMDPs)</left></td>
+                  <td><left>17.4</left></td>
                   <td></td>
                   <td><center>Homework 3</center></td>
                   <td></td>
@@ -342,8 +342,8 @@
                 <tr>
                   <td><left>24</left></td>
                   <td><left>Thu Nov 14</left></td>
-                  <td><left>Neural Networks</left></td>
-                  <td><left>18.7</left></td>
+                  <td><left>Game Trees</left></td>
+                  <td><left>5.1-5.3</left></td>                  
                   <td></td>
                   <td></td>
                   <td><left>Theory Project Deadline (<b>Nov 13</b>)</left></td>
@@ -352,8 +352,8 @@
                 <tr>
                   <td><left>25</left></td>
                   <td><left>Tue Nov 19</left></td>
-                  <td><left>Robotics 1</left></td>
-                  <td><left>25.1-25.2</left></td>
+                  <td><left>Statistical Learning, Neural Networks</left></td>
+                  <td><left>18.1-18.5, 18.7</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -362,8 +362,8 @@
                 <tr>
                   <td><left>26</left></td>
                   <td><left>Thu Nov 21</left></td>
-                  <td><left>Robotics 2</left></td>
-                  <td><left>25.4.1</left></td>
+                  <td><left>Robotics</left></td>
+                  <td><left>25.4.1, 25.1-25.2</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
