--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -352,8 +352,8 @@
                 <tr>
                   <td><left>25</left></td>
                   <td><left>Tue Nov 19</left></td>
-                  <td><left>Statistical Learning, Neural Networks</left></td>
-                  <td><left>18.1-18.5, 18.7</left></td>
+                  <td><left>Statistical Learning</left></td>
+                  <td><left>18.1-18.5</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -362,8 +362,8 @@
                 <tr>
                   <td><left>26</left></td>
                   <td><left>Thu Nov 21</left></td>
-                  <td><left>Robotics</left></td>
-                  <td><left>25.4.1, 25.1-25.2</left></td>
+                  <td><left>Neural Networks</left></td>
+                  <td><left>18.7</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -374,7 +374,7 @@
                   <td><left>Tue Nov 26</left></td>
                   <td><left>Project Presentations</left></td>
                   <td><left></left></td>
-                  <td></td>
+                  <td><center>Homework 4</center></td>
                   <td></td>
                   <td><left>Programming Project Deadline (<b>Nov 25</b>)</left></td>
                 </tr>
@@ -395,14 +395,14 @@
                   <td><left>Project Presentations</left></td>
                   <td></td>
                   <td></td>
-                  <td></td>
+                  <td><center>Homework 4</center></td>
                   <td></td>
                 </tr>     
 
                 <tr>
                   <td><left>30</left></td>
                   <td><left>Tue Dec 10</left></td>
-                  <td><left>FINAL EXAM - Tentative (02:30 PM - 04:20 PM)</left></td>
+                  <td><left>FINAL EXAM - 02:30 PM - 04:20 PM</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
