updated membership post fall 2019

--- a/index.html
+++ b/index.html
@@ -234,15 +234,15 @@
                   <p>Ph.D. Student</p>
                 </div>            	
 
+              <div class="col-lg-4">.
+                <img class="rounded-circle" src="images/rashmeet.jpeg" alt="Rashmeet K Nayyar" width="140" height="140">
+                </br></br><h4>Rashmeet K Nayyar</h4>
+                <p>Ph.D. Student</p>
+              </div>
+
               <div class="col-lg-4">
                 	<img class="rounded-circle" src="images/naman.jpg" alt="Naman P Shah" width="140" height="140">
                 	</br></br><h4>Naman P Shah</h4>
-                	<p>Ph.D. Student</p>
-              	</div>
-
-            	<div class="col-lg-4">
-                <a href="https://pulkitverma25.github.io" target="_blank"><img class="rounded-circle" src="images/pulkit.jpg" alt="Pulkit Verma" width="140" height="140"></a>
-                	</br></br><h4><a href="https://pulkitverma25.github.io" target="_blank">Pulkit Verma</a></h4>
                 	<p>Ph.D. Student</p>
               	</div>
               
@@ -253,19 +253,20 @@
           <!--Third Row--> 
           <center>
             <div class="row">
+
+            	<div class="col-lg-4">
+                <a href="https://pulkitverma25.github.io" target="_blank"><img class="rounded-circle" src="images/pulkit.jpg" alt="Pulkit Verma" width="140" height="140"></a>
+                	</br></br><h4><a href="https://pulkitverma25.github.io" target="_blank">Pulkit Verma</a></h4>
+                	<p>Ph.D. Student</p>
+              	</div>
               <div class="col-lg-4">
-                <a href="https://chiravdave.github.io" target="_blank"><img class="rounded-circle" src="images/chirav.jpg" alt="Chirav Dave" width="140" height="140"></a>
-                </br></br><a href="https://chiravdave.github.io" target="_blank"><h4>Chirav Dave</h4> </a>
+                <img class="rounded-circle" src="images/abhyudaya.jpeg" alt="Abhyudaya Srinet" width="140" height="140">
+                </br></br><h4>Abhyudaya Srinet</h4>
                 <p>M.S. Student</p>
               </div>
               <div class="col-lg-4">
-                <img class="rounded-circle" src="images/kislay2.jpg" alt="Kislay Kumar" width="140" height="140">
-                </br></br><h4>Kislay Kumar</h4>
-                <p>M.S. Student</p>
-              </div>
-              <div class="col-lg-4">.
-                <img class="rounded-circle" src="images/rashmeet.jpeg" alt="Rashmeet K Nayyar" width="140" height="140">
-                </br></br><h4>Rashmeet K Nayyar</h4>
+                <img class="rounded-circle" src="images/deepak.jpg" alt="Deepak K Vasudevan" width="140" height="140">
+                </br></br><h4>Deepak Kala Vasudevan</h4>
                 <p>M.S. Student</p>
               </div>
             </div>
@@ -299,6 +300,16 @@
   								  <thead>
   								  </thead>
   								  <tbody>
+                      <tr >
+                        <td>Kislay Kumar</td>
+                        <td>M.S.</td>
+                        <td>May 2018 - Dec 2019</td>
+                      </tr>
+                      <tr >
+                        <td><a href="https://chiravdave.github.io/" target="_blank">Chirav Dave</a></td>
+                        <td>M.S.</td>
+                        <td>Dec 2017 - Dec 2019</td>
+                      </tr>                      
                       <tr >
                         <td>Daniel Molina</td>
                         <td>M.S.</td>
