Updated member picture

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </div>            	
 
               <div class="col-lg-4">.
-                <img class="rounded-circle" src="images/rashmeet.jpeg" alt="Rashmeet K Nayyar" width="140" height="140">
+                <img class="rounded-circle" src="images/rashmeet.jpg" alt="Rashmeet K Nayyar" width="140" height="140">
                 </br></br><h4>Rashmeet K Nayyar</h4>
                 <p>Ph.D. Student</p>
               </div>
