Added new papers 2020

--- a/index.html
+++ b/index.html
@@ -389,6 +389,62 @@
           -->
 
           <br>
+          <div class="paper abstraction mobManipulation">
+            <ul class="papers">
+              <li> 
+                <em>Anytime Task and Motion Polices for Stochastic Environments</em>.<br>
+                Naman Shah, Kislay Kumar, Pranav Kamojhalla, Deepak Kala Vasudevan, Siddharth Srivastava .<br>
+                In Proceedings of ICRA 2020. (to appear) <br>
+                <span class="badge badge-primary">State/Action Abstractions</span>
+                <span class="badge badge-secondary">Mobile Manipulation</span>
+              </li>
+            </ul>
+          </div>
+          <div class="paper abstraction learning genTransfer">
+            <ul class="papers">
+              <li> 
+                <em>Learn and Link: Learning Critical Regions for Efficient Planning</em>.<br>
+                Daniel Molina, Kislay Kumar, Siddharth Srivastava.<br>
+                In Proceedings of ICRA 2020. (to appear) <br>
+                <span class="badge badge-primary">State/Action Abstractions</span>
+                <span class="badge badge-warning">Learning</span>
+                <span class="badge badge-info">Plan Generalization and Transfer</span>
+              </li>
+            </ul>
+          </div>
+          <div class="paper assistPlanning abstraction">
+            <ul class="papers">
+              <li> 
+                <em>TLdR: Policy Summarization for Factored SSP Problems Using Temporal Abstractions</em>.<br>
+                Sarath Sreedharan, Siddharth Srivastava, Subbarao Kambhampati.<br>
+                In Proceedings of ICAPS, 2020. (to appear) <br>
+                <span class="badge badge-primary">State/Action Abstractions</span>
+                <span class="badge badge-success">Assistive Planning</span>
+              </li>
+            </ul>
+          </div>
+          <div class="paper assistPlanning partialObservability">
+            <ul class="papers">
+              <li> 
+                <em>Signaling Friends and Head-Faking Enemies Simultaneously: Balancing Goal Obfuscation and Goal Legibility (extended abstract)</em>.<br>
+                Anagha Kulkarni, Siddharth Srivastava, Subbarao Kambampati.<br>
+                In Proceedings of AAMAS, 2020. (to appear) <br>
+                <span class="badge badge-success">Assistive Planning</span>
+                <span class="badge badge-dark">Partial Observability</span>
+              </li>
+            </ul>
+          </div>
+          <div class="paper assistPlanning abstraction">
+            <ul class="papers">
+              <li> 
+                <em>Learning Generalized Models by Interrogating Black-Box Autonomous Agents</em>.<br>
+                Pulkit Verma, Siddharth Srivastava.<br>
+                AAAI Workshop on Generalization in Planning,  2020. (to appear) <br>
+                <span class="badge badge-primary">State/Action Abstractions</span>
+                <span class="badge badge-success">Assistive Planning</span>
+              </li>
+            </ul>
+          </div>
           <div class="paper assistPlanning abstraction">
             <ul class="papers">
               <li> 
@@ -553,8 +609,7 @@
                 <a href="icra14.html">Videos of experiments (PR2 + sim)</a><br>
                 Siddharth Srivastava, Eugene Fang, Lorenzo Riano, Rohan Chitnis,
                 Stuart Russell, Pieter Abbeel. <br>
-                In Proceedings of the IEEE Conference on Robotics and
-                Automation (ICRA), 2014.<br>
+                In Proceedings of ICRA, 2014.<br>
                 <span class="badge badge-secondary">Mobile Manipulation</span>
                 <span class="badge badge-primary">State/Action Abstractions</span>
               </li>
