--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             <ul class="papers">
               <li> 
                 <em>Signaling Friends and Head-Faking Enemies Simultaneously: Balancing Goal Obfuscation and Goal Legibility (extended abstract)</em>.<br>
-                Anagha Kulkarni, Siddharth Srivastava, Subbarao Kambampati.<br>
+                Anagha Kulkarni, Siddharth Srivastava, Subbarao Kambhampati.<br>
                 In Proceedings of AAMAS, 2020. (to appear) <br>
                 <span class="badge badge-success">Assistive Planning</span>
                 <span class="badge badge-dark">Partial Observability</span>
