Updated ICRA paper info

--- a/index.html
+++ b/index.html
@@ -393,22 +393,25 @@
             <ul class="papers">
               <li> 
                 <em>Anytime Task and Motion Polices for Stochastic Environments</em>.<br>
-                Naman Shah, Kislay Kumar, Pranav Kamojhalla, Deepak Kala Vasudevan, Siddharth Srivastava .<br>
+                <a href="atam_full_vids.html">Videos of experiments</a><br>
+                Naman Shah, Kislay Kumar, Pranav Kamojhalla, Deepak Kala Vasudevan, Siddharth Srivastava.<br>
                 In Proceedings of ICRA 2020. (to appear) <br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-secondary">Mobile Manipulation</span>
               </li>
             </ul>
           </div>
-          <div class="paper abstraction learning genTransfer">
+          <div class="paper abstraction learning genTransfer mobManipulation">
             <ul class="papers">
               <li> 
                 <em>Learn and Link: Learning Critical Regions for Efficient Planning</em>.<br>
+                <a href="ll.html">Videos of experiments</a><br>
                 Daniel Molina, Kislay Kumar, Siddharth Srivastava.<br>
                 In Proceedings of ICRA 2020. (to appear) <br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-warning">Learning</span>
                 <span class="badge badge-info">Plan Generalization and Transfer</span>
+                <span class="badge badge-secondary">Mobile Manipulation</span>
               </li>
             </ul>
           </div>
