--- a/ll.html
+++ b/ll.html
@@ -57,9 +57,9 @@
     <div class="card-main mx-2" >
       <div class="card-body mx-0">
         <div class="publications"  id="publications">
-          <h2>Learn and Link: A Learning-Amenable Planning Paradigm</h2><br>
+          <h2>Learn and Link: Learning Critical Regions for Efficient Planning</h2><br>
           <h3>Daniel Molina, Kislay Kumar, Siddharth Srivastava</h3><br>
-          <h4>[Submitted, IEEE Conference on Robotics and Automation (ICRA), 2020]</h4><br>
+          <h4>[To appear, IEEE Conference on Robotics and Automation (ICRA), 2020]</h4><br>
 
           <b><a href="ll_planners/ll_full_version.pdf">Full version of the submitted paper</a></b><br>
           <b>Source code</b><br>
