--- a/atam_full.html
+++ b/atam_full.html
@@ -59,7 +59,7 @@
         <div class="publications"  id="publications">
           <h2>Anytime Task and Motion Polcies for Stochastic Environments</h2><br>
           <h3>Naman Shah, Kislay Kumar, Pranav Kamojhalla, Deepak Kala Vasudevan, Siddharth Srivastava </h3><br>
-          <h4>[Submitted, IEEE Conference on Robotics and Automation (ICRA), 2020]</h4><br>
+          <h4>[To appear, IEEE Conference on Robotics and Automation (ICRA), 2020]</h4><br>
 
 
           <b><a href="atam/atam_full_version.pdf">Full version of the submitted paper</a></b><br>
