Fixed minor UI bug

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <!--First Row-->
           <div class="container-fluid"> 
             <div class="row" >
-              <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 mx-0 px-0">
+              <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 mx-0 px-0" style="margin-bottom:25px;">
                 <div class="card rcard mx-2">
                   <div class="card-body">
                     <h4 class="card-title">Planning and Reasoning Under Uncertainty</h4>
