--- a/ll.html
+++ b/ll.html
@@ -61,7 +61,7 @@
           <h3>Daniel Molina, Kislay Kumar, Siddharth Srivastava</h3><br>
           <h4>[IEEE Conference on Robotics and Automation (ICRA), 2020 (to appear)]</h4><br>
 
-          <b><a href="Projects/ll_planners/ll_full_version.pdf">Full version of the submitted paper</a></b><br>
+          <b><a href="Projects/ll_planners/ll_full_version.pdf">Extended version of the submitted paper</a></b><br>
           <b>Source code</b><br>
           <ul>
             <li><a href="Projects/ll_planners/ll_planners.zip">LL Planners</a></li>
