Uploaded genplan20 and ll papers, added new members

--- a/index.html
+++ b/index.html
@@ -253,12 +253,28 @@
           <!--Third Row--> 
           <center>
             <div class="row">
-
-            	<div class="col-lg-4">
+              <div class="col-lg-4">
                 <a href="https://pulkitverma25.github.io" target="_blank"><img class="rounded-circle" src="images/pulkit.jpg" alt="Pulkit Verma" width="140" height="140"></a>
-                	</br></br><h4><a href="https://pulkitverma25.github.io" target="_blank">Pulkit Verma</a></h4>
-                	<p>Ph.D. Student</p>
-              	</div>
+                  </br></br><h4><a href="https://pulkitverma25.github.io" target="_blank">Pulkit Verma</a></h4>
+                  <p>Ph.D. Student</p>
+                </div>
+              <div class="col-lg-4">
+                <a href="https://raoshashank.github.io/smarpall.github.io/" target="_blank"><img class="rounded-circle" src="images/shashank.jpeg" alt="Shashank Rao Marpally" width="140" height="140"></a>
+                </br></br><h4><a href="https://raoshashank.github.io/smarpall.github.io/" target="_blank">Shashank Rao Marpally</a></h4>
+                <p>M.S. Student</p>
+              </div>
+              <div class="col-lg-4">
+                <a href="https://nithishb.github.io/my-website/#/about" target="_blank"><img class="rounded-circle" src="images/nithish.jpg" alt="Nithish Moudhgalya" width="140" height="140"></a>
+                </br></br><h4><a href="https://nithishb.github.io/my-website/#/about" target="_blank">Nithish Moudhgalya</a></h4>
+                <p>M.S. Student</p>
+              </div>
+            </div>
+          </center>
+          </br></br></br>
+
+          <!--Forth Row--> 
+          <center>
+            <div class="row">
               <div class="col-lg-4">
                 <img class="rounded-circle" src="images/abhyudaya.jpeg" alt="Abhyudaya Srinet" width="140" height="140">
                 </br></br><h4>Abhyudaya Srinet</h4>
@@ -269,11 +285,16 @@
                 </br></br><h4>Deepak Kala Vasudevan</h4>
                 <p>M.S. Student</p>
               </div>
+              <div class="col-lg-4">
+                <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Judith Rosenke" width="140" height="140">
+                </br></br><h4>Judith Rosenke</h4>
+                <p>B.S. Student</p>
+              </div>
             </div>
           </center>
           </br></br></br>
 
-          <!--Forth Row--> 
+          <!--Fifth Row--> 
           <center>
             <div class="row">
               <div class="col-lg-7">
@@ -403,9 +424,11 @@
           <div class="paper abstraction learning genTransfer mobManipulation">
             <ul class="papers">
               <li> 
-                <em>Learn and Link: Learning Critical Regions for Efficient Planning</em>.<br>
+                <em><a href="Publications/mks_icra20.pdf">Learn and Link: Learning Critical Regions for Efficient Planning</a></em>.<br>
+                <a href="ll.html">Project Page</a><br>
                 Daniel Molina, Kislay Kumar, Siddharth Srivastava.<br>
                 In Proceedings of ICRA 2020. (to appear) <br>
+
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-warning">Learning</span>
                 <span class="badge badge-info">Plan Generalization and Transfer</span>
@@ -438,9 +461,9 @@
           <div class="paper assistPlanning abstraction">
             <ul class="papers">
               <li> 
-                <em>Learning Generalized Models by Interrogating Black-Box Autonomous Agents</em>.<br>
+                <em><a href="Publications/vs_genplan20.pdf">Learning Generalized Models by Interrogating Black-Box Autonomous Agents</a></em>.<br>
                 Pulkit Verma, Siddharth Srivastava.<br>
-                AAAI Workshop on Generalization in Planning,  2020. (to appear) <br>
+                AAAI Workshop on Generalization in Planning,  2020.<br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-success">Assistive Planning</span>
               </li>
