added Ayan's info

--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                 <p>M.S. Student</p>
               </div>
               <div class="col-lg-4">
-                <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Judith Rosenke" width="140" height="140">
-                </br></br><h4>Judith Rosenke</h4>
+                <img class="rounded-circle" src="images/ayan.png" alt="Ayan Joshi" width="140" height="140">
+                </br></br><h4>Ayan Joshi</h4>
                 <p>B.S. Student</p>
               </div>
             </div>
@@ -297,20 +297,27 @@
           <!--Fifth Row--> 
           <center>
             <div class="row">
-              <div class="col-lg-7">
+              <div class="col-lg-4">
+                <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Judith Rosenke" width="140" height="140">
+                </br></br><h4>Judith Rosenke</h4>
+                <p>B.S. Student</p>
+              </div>
+              <div class="col-lg-4">
                 <a href="https://fetchrobotics.com/robotics-platforms/fetch-mobile-manipulator/" target="_blank"><img class="rounded-circle" src="images/alfred.jpg" alt="Alfred" width="140" height="140"></a>
                 </br></br><a href="https://fetchrobotics.com/robotics-platforms/fetch-mobile-manipulator/" target="_blank"><h4>Alfred</h4> </a>
                 <p>Robot</p>
               </div>
   
-             <div class="col-lg-2">
+             <div class="col-lg-4">
                 <a href="https://new.abb.com/products/robotics/industrial-robots/irb-14000-yumi" target="_blank"><img class="rounded-circle" src="images/yumi.jpg" alt="YuMi" width="140" height="140"></a>
                 </br></br><a href="https://new.abb.com/products/robotics/industrial-robots/irb-14000-yumi" target="_blank"><h4>YuMi</h4> </a>
                 <p>Robot</p>
               </div>
             </div>
           </center>
+          </br></br></br>
 
+          <!--Alumni Section--> 
  					<center>
 						<h4>Alumni</h4>
 						<br>
