Added AAMAS20 paper

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
           <div class="paper assistPlanning partialObservability">
             <ul class="papers">
               <li> 
-                <em>Signaling Friends and Head-Faking Enemies Simultaneously: Balancing Goal Obfuscation and Goal Legibility (extended abstract)</em>.<br>
+                <em><a href="Publications/ksk_aamas20.pdf">Signaling Friends and Head-Faking Enemies Simultaneously: Balancing Goal Obfuscation and Goal Legibility (extended abstract)</a></em>.<br>
                 Anagha Kulkarni, Siddharth Srivastava, Subbarao Kambhampati.<br>
                 In Proceedings of AAMAS, 2020. (to appear) <br>
                 <span class="badge badge-success">Assistive Planning</span>
