Added ICAPS20 paper

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
           <div class="paper assistPlanning abstraction">
             <ul class="papers">
               <li> 
-                <em>TLdR: Policy Summarization for Factored SSP Problems Using Temporal Abstractions</em>.<br>
+                <em><a href="Publications/ssk_icaps20.pdf">TLdR: Policy Summarization for Factored SSP Problems Using Temporal Abstractions</a></em>.<br>
                 Sarath Sreedharan, Siddharth Srivastava, Subbarao Kambhampati.<br>
                 In Proceedings of ICAPS, 2020. (to appear) <br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
