Added Judith's pic

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <center>
             <div class="row">
               <div class="col-lg-4">
-                <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Judith Rosenke" width="140" height="140">
+                <img class="rounded-circle" src="images/judith.jpg" alt="Judith Rosenke" width="140" height="140">
                 </br></br><h4>Judith Rosenke</h4>
                 <p>B.S. Student</p>
               </div>
