--- a/index.html
+++ b/index.html
@@ -420,8 +420,9 @@
           <div class="paper abstraction mobManipulation">
             <ul class="papers">
               <li> 
-                <em>Anytime Task and Motion Polices for Stochastic Environments</em>.<br>
-                Naman Shah, Kislay Kumar, Pranav Kamojhalla, Deepak Kala Vasudevan, Siddharth Srivastava.<br>
+                <em><a href = "Publications/skkks_icra20.pdf" target = "_Blank">Anytime Task and Motion Polices for Stochastic Environments</a></em>.<br>
+                <a href="stamp.html">Project Page</a><br>
+                Naman Shah, Deepak Kala Vasudevan, Kislay Kumar, Pranav Kamojhalla,  Siddharth Srivastava.<br>
                 In Proceedings of ICRA 2020. (to appear) <br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
                 <span class="badge badge-secondary">Mobile Manipulation</span>
