removing stamp page

--- a/stamp.html
+++ b/stamp.html
@@ -57,7 +57,7 @@
     <div class="card-main mx-2" >
       <div class="card-body mx-0">
         <div class="publications"  id="publications">
-          <h2>Anytime Task and Motion Polcies for Stochastic Environments</h2><br>
+          <h2>Anytime Task and Motion Policies for Stochastic Environments</h2><br>
           <h3>Naman Shah, Deepak Kala Vasudevan, Kislay Kumar, Pranav Kamojhalla,Siddharth Srivastava </h3><br>
           <h4>[IEEE Conference on Robotics and Automation (ICRA), 2020 (to appear)]</h4><br>
 
@@ -70,8 +70,8 @@
 
           <br><br><br>
 
-          <h3> Video Experiments </h3>
-          In all the experiments below, "solution" refers to a low-level solution: a sequence of motion planning trajectories and gripper-close and open events. 
+          <h3> Videos of experiments: </h3>
+          In all the experiments below, "solution" refers to a proper policy with low-level refinement of all the actions. 
           <br><br><br>
           <h4> Cluttered Table </h4>
           <i>Goal</i>: Pick up the black object.
@@ -124,10 +124,10 @@
           <h6><b>Structure 2</b>: Spiral Tower (height: 12)</h6><br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/RhLkwfnGLzw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br><br>
-          <h6><b>Structure 3</b>: Tripple Pi</h6><br>
+          <h6><b>Structure 3</b>: 3Pi</h6><br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/G2eEHR36EWI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br><br>
-          <h6><b>Structure 4</b>: Trippe Tower (height: 8)</h6><br>
+          <h6><b>Structure 4</b>: Triple Tower (height: 8)</h6><br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/jp9eM72_68Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br><br>
           <br>
