fixed paper titles

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
           <div class="paper abstraction">
             <ul class="papers">
               <li> 
-                <em><a href="Publications/sirle18_safe_abstraction.pdf">Safe Goal-Directed Autonomy and the Need for Safe Abstractions</a></em>.<br>
+                <em><a href="Publications/sirle18_safe_abstraction.pdf">Safe Goal-Directed Autonomy and the Need for Sound Abstractions</a></em>.<br>
                 Siddharth Srivastava.<br>
                 In Proceedings of AAAI Spring Symposium on Integrating Representation, Reasoning, Learning and Execution (SIRLE '18).<br>
                 <span class="badge badge-primary">State/Action Abstractions</span>
@@ -612,7 +612,7 @@
           <div class="paper partialObservability learning abstraction generalizedPlanning genTransfer">
             <ul class="papers">   
               <li> 
-                <em> <a href="Publications/szgar_aaai15.pdf"> Tractability of Generalized Planning</a></em>.<br>
+                <em> <a href="Publications/szgar_aaai15.pdf"> Tractability of Planning with Loops</a></em>.<br>
                 Siddharth Srivastava, Shlomo Zilberstein, Abhishek Gupta, Pieter Abbeel, Stuart Russell.<br>
                 In Proceedings of AAAI, 2015.<br>                
                 <span class="badge badge-dark">Partial Observability</span>
